ZON-1829: Avoid auto-collapsing margins

--- a/sass/web.site/modules/teaser/_teaser-gallery.sass
+++ b/sass/web.site/modules/teaser/_teaser-gallery.sass
@@ -5,9 +5,9 @@
 
 .teaser-gallery-group
 	&__container
-		margin-bottom: remify(10px)
+		padding-bottom: remify(10px)
 		+respond-min($break-tablet-min)
-			margin-bottom: remify(20px)
+			padding-bottom: remify(20px)
 			// flexbox for same height
 			+display-flex
 
